<resources>
    <string name="app_name">Get It Done</string>
    <string name="hello">Hello!</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="slang1">Let\'s Be Productive Today!</string>
    <string name="personal">Personal</string>
    <string name="shopping">Shopping</string>
    <string name="habit">Habit</string>
    <string name="work">Work</string>
    <string name="today_tasks">Today\'s Tasks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add_task">Add Task</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="save">Save</string>
    <string name="pick_date_warrning">You Must Pick A Date!</string>
    <string name="due_tasks">Due Tasks</string>
    <string name="location">Location</string>
    <string name="over_duo_tasks">Over Duo Tasks</string>
</resources>