<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/slang1"
        android:textColor="@color/black_400"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@color/white_700"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/categories"
                android:textColor="@color/black_400"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/personal_cat_btn"
                        android:layout_width="70sp"
                        android:layout_height="70sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/red"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20sp"
                            android:src="@drawable/ic_profile"
                            app:tint="@color/white" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/personal"
                        android:textColor="@color/black_400"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/shopping_cat_btn"
                        android:layout_width="70sp"
                        android:layout_height="70sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/yellow"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20sp"
                            android:src="@drawable/ic_shopping"
                            app:tint="@color/white" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/shopping"
                        android:textColor="@color/black_400"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/work_cat_btn"
                        android:layout_width="70sp"
                        android:layout_height="70sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/green"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20sp"
                            android:src="@drawable/ic_work"
                            app:tint="@color/white" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/work"
                        android:textColor="@color/black_400"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/habit_cat_btn"
                        android:layout_width="70sp"
                        android:layout_height="70sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/orange"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20sp"
                            android:src="@drawable/ic_habit"
                            app:tint="@color/white" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/habit"
                        android:textColor="@color/black_400"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/today_tasks"
                android:textColor="@color/black_400"
                android:textSize="28sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_task_rcv"
                android:layout_marginBottom="60sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:fabSize="normal"
        android:backgroundTint="@color/blue"
        android:elevation="5dp"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="selected"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>