<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:id="@+id/fragmentDatCon">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/add_new_task"
        android:textColor="@color/black_400"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@color/white_700"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_in_lo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:hint="@string/task">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_in_et"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/black_400"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc_in_lo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desc_in_et"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/black_400"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10sp"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/personal_cat_task"
                        android:layout_width="110sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/red"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="33dp"
                            android:layout_height="match_parent"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:src="@drawable/ic_profile"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/cairo_semibold"
                            android:textSize="16sp"
                            android:text="@string/personal"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shopping_cat_task"
                        android:layout_width="110sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/yellow"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="33dp"
                            android:layout_height="match_parent"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:src="@drawable/ic_shopping"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/cairo_semibold"
                            android:textSize="16sp"
                            android:text="@string/shopping"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/work_cat_task"
                        android:layout_width="110sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/green"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="33dp"
                            android:layout_height="match_parent"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:src="@drawable/ic_work"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/cairo_semibold"
                            android:textSize="16sp"
                            android:layout_marginStart="10sp"
                            android:text="work"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/habit_cat_task"
                        android:layout_width="110sp"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:background="@drawable/cat_bg_shape"
                        android:backgroundTint="@color/orange"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="33dp"
                            android:layout_height="match_parent"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:src="@drawable/ic_habit"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/cairo_semibold"
                            android:layout_marginStart="6sp"
                            android:textSize="16sp"
                            android:text="@string/habit"/>
                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>



            <LinearLayout
                android:id="@+id/date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:src="@drawable/ic_calendar"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:layout_marginTop="3sp"
                    android:fontFamily="@font/cairo_semibold"
                    android:layout_marginStart="8sp"/>

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12/ew/2332"
                    android:textSize="18sp"
                    android:layout_marginTop="3sp"
                    android:fontFamily="@font/cairo_semibold"
                    android:layout_marginStart="8sp"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_task_btn"
                android:layout_width="match_parent"
                android:layout_margin="20sp"
                android:text="@string/add_task"
                android:fontFamily="@font/cairo_semibold"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="selected"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>